<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iliaskomp.highfivecardgame.activities.MainActivity">

    <ImageView
        android:contentDescription="@string/image_description_logo"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo"/>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            style="@style/buttonStyle"
            android:id="@+id/button_start_game"
            android:layout_width="300dp"
            android:layout_marginBottom="40dp"
            android:text="@string/button_start_game"/>

        <Button
            style="@style/buttonStyle"
            android:id="@+id/button_settings"
            android:layout_width="300dp"
            android:layout_marginBottom="40dp"
            android:text="@string/button_settings"/>

        <Button
            style="@style/buttonStyle"
            android:id="@+id/button_info"
            android:layout_width="300dp"
            android:text="@string/button_info"/>

    </LinearLayout>


</LinearLayout>
