<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_view_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@color/md_amber_500"
        android:gravity="center"
        android:textSize="24sp"
        tools:text="@string/message_start_game_default_mode"
        tools:visibility="visible"/>

    <android.support.v7.widget.GridLayout
        android:id="@+id/grid_layout_card_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="1"
        app:columnCount="4"
        app:rowCount="2">

        <ImageView
            android:id="@+id/image_view_rules_card1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/image_description_start_card_1"
            app:layout_columnWeight="1"
            tools:src="@drawable/eight_of_clubs"/>

        <TextView
            android:id="@+id/text_view_rules_card1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_columnWeight="2"
            tools:text="Rule 1 does this and this"/>

        <ImageView
            android:id="@+id/image_view_rules_card2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/image_description_start_card_2"
            app:layout_columnWeight="1"
            tools:src="@drawable/eight_of_clubs"/>

        <TextView
            android:id="@+id/text_view_rules_card2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_columnWeight="2"
            tools:text="Rule 1 does this and this"/>

        <ImageView
            android:id="@+id/image_view_rules_card3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/image_description_start_card_3"
            app:layout_columnWeight="1"
            tools:src="@drawable/eight_of_clubs"/>

        <TextView
            android:id="@+id/text_view_rules_card3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_columnWeight="2"
            tools:text="Rule 1 does this and this"/>

        <ImageView
            android:id="@+id/image_view_rules_card4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/image_description_start_card_4"
            app:layout_columnWeight="1"
            tools:src="@drawable/eight_of_clubs"/>

        <TextView
            android:id="@+id/text_view_rules_card4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_columnWeight="2"
            tools:text="Rule 1 does this and this"/>
    </android.support.v7.widget.GridLayout>


    <ImageView
        android:id="@+id/image_view_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:contentDescription="@string/image_description_drawn_card"
        android:padding="12dp"
        tools:src="@drawable/eight_of_clubs"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/text_view_timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="3"
        tools:visibility="gone"/>
</LinearLayout>
